# thunderbuns

./: .gitignore  LICENSE  README.md  package.yaml  stack.yaml  thunderbuns.cabal
.fossil-settings/: ignore-glob
app/: Main.hs
d64/: README.md  package.yaml
d64/src/Data/ByteString/: D64.hs
d64/test/: Spec.hs
frontend/: .gitignore  bower.json  gulpfile.js  index.html  package-lock.json  package.json  styles.css
frontend/src/: Main.purs
frontend/src/Thunderbuns/: WebAPI.purs
frontend/src/Thunderfront/: Controller.purs  Jwt.js  Scroll.js  Scroll.purs  Sensor.purs  Utils.purs  View.js  View.purs  WebSocket.js  WebSocket.purs
frontend/src/Thunderfront/Forms/: Login.purs
frontend/src/Thunderfront/Types/: Model.purs  Msg.purs  WS.purs
hexdump-xxd/: README.md  hexdump-xxd.cabal  package.yaml
hexdump-xxd/src/Data/ByteString/: Hexdump.hs
hexdump-xxd/test/: HexdumpSpec.hs
picolens/: README.md  package.yaml  picolens.cabal
picolens/src/Control/Lens/: PicoLens.hs
picolens/test/: PicoLensSpec.hs
src/: Lib.hs
src/Thunderbuns/: CmdLine.hs  Config.hs  Exceptions.hs  GenPS.hs  Logging.hs  Server.hs  Validate.hs
src/Thunderbuns/Config/: CmdLine.hs  DB.hs  Jwt.hs
src/Thunderbuns/DB/: Init.hs  Internal.hs  User.hs
src/Thunderbuns/Server/: Debug.hs  User.hs
tcql4/: .gitignore  ChangeLog.md  LICENSE  README.md  TODO.txt  package.yaml  stack.yaml  tcql4.cabal
tcql4/app/: Main.hs
tcql4/src/Database/: CQL4.hs
tcql4/src/Database/CQL4/: Connection.hs  Exceptions.hsc  Get.hs  Protocol.hs  Put.hs  Types.hs  Values.hs
tcql4/src/Database/CQL4/Internal/: Get.hs  GetVarint.hs  Protocol.hs  Put.hs  PutVarint.hs  Types.hs
tcql4/src/Database/CQL4/Varint/: Get.hs  Put.hs
tcql4/src/Thunderbuns/CQL4/: Get.hs
tcql4/test/: GetSpec.hs  PutGetSpec.hs  PutSpec.hs  ValuesSpec.hs  VarintSpec.hs
tcql4/test/Internal/: GetSpec.hs  GetVarintSpec.hs  PutGetSpec.hs  PutSpec.hs  PutVarintSpec.hs  VarintSpec.hs
tcql4/test/Varint/: GetSpec.hs  PutSpec.hs
tfreetime/: README.md  package.yaml  tfreetime.cabal
tfreetime/src/Control/Monad/Free/: Combinators.hs
tfreetime/src/Data/Time/: Free.hs
tfreetime/test/: FreeTimeSpec.hs
thunderbuns/: .#UUID.md  .gitignore  README.md  TODO.txt  config  package.yaml  thunderbuns.cabal
thunderbuns/app/: Main.hs
thunderbuns/config/: DB.dhall  HTTP.dhall  IrcServer.dhall  Log.dhall  Schema.dhall
thunderbuns/frontend/: bower.json  gulpfile.js  index.html  package-lock.json  package.json  styles.css
thunderbuns/frontend/src/: Main.purs
thunderbuns/frontend/src/Thunderbuns/: WebAPI.purs
thunderbuns/frontend/src/Thunderbuns/Auth/: Types.purs
thunderbuns/frontend/src/Thunderbuns/WebAPI/: GenTypes.purs  OrderedUUID.purs  Types.purs
thunderbuns/frontend/src/Thunderfront/: Controller.purs  EventSource.js  EventSource.purs  Jwt.purs  Model.purs  Scroll.js  Scroll.purs  Sensor.js  Sensor.purs  Types.purs  Utils.purs  View.purs
thunderbuns/frontend/src/Thunderfront/Forms/: Login.purs
thunderbuns/src/: Lib.hs
thunderbuns/src/Thunderbuns/: Auth.hs  Channel.hs  CmdLine.hs  Config.hs  Event.hs  Exception.hs  GenPS.hs  OrderedUUID.hs  Persist.hs  Server.hs  Tlude.hs  Utils.hs  Validate.hs
thunderbuns/src/Thunderbuns/Auth/: DB.hs  Types.hs
thunderbuns/src/Thunderbuns/Channel/: Types.hs
thunderbuns/src/Thunderbuns/Config/: DB.hs  Server.hs
thunderbuns/src/Thunderbuns/DB/: Auth.hs  Init.hs  Internal.hs
thunderbuns/src/Thunderbuns/Irc/: Api.hs  Client.hs  Config.hs  Connection.hs  Parser.hs  Types.hs
thunderbuns/src/Thunderbuns/Persist/: Api.hs  Gen.hs  Main.hs  Types.hs
thunderbuns/src/Thunderbuns/Server/: Auth.hs  Channel.hs  Debug.hs  Event.hs  Types.hs  User.hs
thunderbuns/src/Thunderbuns/WS/: Api.hs  Handler.hs  Main.hs  Types.hs
thunderbuns/test/: WSSpec.hs
thunderbuns/test/Irc/: ParserSpec.hs
thunderbuns/test/Thunderbuns/: AuthSpec.hs  OrderedUUIDSpec.hs  ValidateSpec.hs
tlogger/: .ghci  README.md  package.yaml  tlogger.cabal
tlogger/src/Thunderbuns/: Logging.hs
tlogger/test/: LoggingSpec.hs
tprocess/: ChangeLog.md  README.md  tprocess.cabal
tprocess/app/: Main.hs
tprocess/src/Thunderbuns/: Process.hsc
