name:                thunderbuns
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/grmble/thunderbuns#readme
license:             MIT
license-file:        LICENSE
author:              Juergen Gmeiner
maintainer:          spamless.juergen@gmail.com
copyright:           (c) 2018 Juergen Gmeiner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Thunderbuns.Config
                     , Thunderbuns.Config.CmdLine
                     , Thunderbuns.Logging
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cmdargs
                     , dhall
                     , network
                     , scientific
                     , servant-server
                     , text
                     , time
                     , tprocess
                     , unordered-containers
                     , wai
                     , warp
  default-language:    Haskell2010

executable thunderbuns-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , thunderbuns
  default-language:    Haskell2010

test-suite thunderbuns-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , thunderbuns
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/grmble/thunderbuns
