name:           tprocess
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/grmble/thunderbuns#readme>
homepage:       https://github.com/grmble/thunderbuns#readme
bug-reports:    https://github.com/grmble/tprocess/issues
author:         Juergen Gmeiner
maintainer:     spamless.juergen@gmail.com
copyright:      (c) 2018 Juergen Gmeiner
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/grmble/tprocess

library
  hs-source-dirs:
      src
  default-extensions: ApplicativeDo BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      Thunderbuns.Process
  other-modules:
      Paths_tprocess

  if os(windows)
    build-depends: Win32 >= 2.2 && < 2.7
    extra-libraries: kernel32
    cpp-options: -DWINDOWS
  else
    build-depends: unix >= 2.5 && < 2.8

  default-language: Haskell2010

test-suite tprocess-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions: ApplicativeDo BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , tprocess
  other-modules:
      Paths_tprocess
  default-language: Haskell2010
